<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
	
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    
	   	<TextView 
			    android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:text="@string/item" />
	   	
		<EditText 
		    android:id="@+id/item" 
			android:layout_width="0dip"
			android:layout_weight="100"
			android:layout_height="wrap_content"
			android:inputType="textCapWords" 
			android:hint="@string/item_description" />
		
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
		
		<TextView 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/unit_price" />
		
		<EditText 
		    android:id="@+id/unitPrice" 
		    android:layout_width="0dip"
		    android:layout_weight="100"
			android:layout_height="wrap_content"
			android:inputType="numberDecimal"
			android:maxLength="10" />
		
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
		
		<TextView 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/unit_quantity" />
		
		<EditText 
		    android:id="@+id/unitQuantity" 
		    android:layout_width="0dip"
		    android:layout_weight="100"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:maxLength="10" />
		
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
		
		<TextView 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:minWidth="80dp"
			android:text="@string/unit_total_price" />
		
		<TextView 
		    android:id="@+id/unitTotalPrice" 
		    android:layout_width="245dip"
			android:layout_height="wrap_content"
			android:textSize="18sp"
			android:textStyle="bold"
			android:maxLength="20" />
		
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
		
		<TextView android:id="@+id/cancel_label" 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" 
		    android:text="@string/cancel"/>
		
		<CheckBox android:id="@+id/cancel"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
		
	</LinearLayout>
	
	<Button android:id="@+id/confirm" 
	    android:text="@string/confirm"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />

</LinearLayout>